--- a/menu.css
+++ b/menu.css
@@ -43,6 +43,7 @@ header {
 
 header h1 {
     margin-right: 10px; /* Space between logo and title */
+    letter-spacing: .5px;
     font-size: 24px;
     margin-bottom: 10px;
     font-weight: bolder;
@@ -53,13 +54,14 @@ header p {
 }
 
 .logo-container {
+    margin-left: 20px;
     margin-right: 10px; /* Space between logo and title */
 }
 
 .logo {
     width: 40px; /* Adjust size as needed */
     height: 40px;
-    border-radius: 50%; /* Makes the logo circular */
+    border-radius: 5%; /* Makes the logo circular */
     object-fit: cover; /* Ensures the logo fits the container */
 }
 
@@ -77,19 +79,23 @@ main {
     justify-content: center;
     align-items: center;
     gap: 50px;
-    margin-bottom: 40px;
+    margin-bottom: 90px;
     width: 100%;
 }
 
 .game-mode {
+    letter-spacing: .5px;
+    border: 2px solid #333;
+    border-radius: 25px;
+    text-decoration: none;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    padding: 20px;
+    padding: 70px;
     text-align: center;
     width: 200px; /* Fixed width for each game mode */
     height: 220px;
-    transition: transform 0.3s ease; /* Smooth transition for hover effect */
+    transition: transform 0.1s ease; /* Smooth transition for hover effect */
 }
 
 .game-mode:hover {
@@ -123,14 +129,15 @@ main {
 .image-container {
     display: flex;
     justify-content: center;
+    max-width: 100%;
     gap: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 60px;
 }
 
 .image-container img {
-    width: 70px; /* Adjust size as needed */
-    height: 70px;
-    border-radius: 50%; /* Makes the images circular */
+    width: 110px; /* Adjust size as needed */
+    height: 110px;
+    border-radius: 5%; /* Makes the images circular */
     object-fit: cover; /* Ensures the image fits the container */
 }
 
@@ -144,8 +151,19 @@ footer {
 }
 
 .laro{
-    font-size: 14px !important;
-    font-weight: bolder;
+    display: block;
+    width: 80%;
+    padding: 12px;
+    margin: 10px auto;
+    border: 2px solid #333;
+    border-radius: 25px;
+    text-decoration: none;
+    color: #333;
+    font-family: sans-serif;
+    font-size: 16px;
+    background-color: white;
+    transition: background-color 0.3s ease;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
 
 /* Minimalistic Scrollbar */
@@ -173,7 +191,30 @@ footer {
     }
 
     .game-mode {
-        width: 80%; /* Adjust width for smaller screens */
+        background-color: #fff;
+        border-radius: 10px;
+        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        padding: 10px;
+    }
+
+    .image-container {
+        margin-bottom: 20px;
+    }
+
+    .image-container img {
+        width: 100px; /* Adjust size as needed */
+        height: 100px;
+        border-radius: 5%; /* Makes the images circular */
+        object-fit: cover; /* Ensures the image fits the container */
+    }
+
+    .game-mode {
+        width: 80%; 
+        height: 40%/* Adjust width for smaller screens */
+    }
+
+    .game-mode:hover {
+        transform: scale(1.03); /* Enlarge the game mode on hover */
     }
 
     .laro{
