--- a/menu.css
+++ b/menu.css
@@ -110,14 +110,14 @@ main {
 }
 
 .laro:hover {
-    transform: scale(1.2); /* Enlarge the game mode on hover */
+    transform: scale(1.03); /* Enlarge the game mode on hover */
     transition: transform 0.3s ease;
 }
 
 .game-mode h2 {
     font-size: 30px;
     margin-bottom: 10px;
-    font-weight: bolder;
+    font-weight: 600;
     font-family: sans-serif;
 }
 
